--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Bonjour, je suis <span class="text-color-main">Graham LAGRANDCOURT</span>
+          Bonjour, je suis <span class="text-color-main">Graham !</span>
           <br />
-          Je suis développeur web fullstack.
+          Je suis développeur web et ton identité numérique, c'est <span class="text-color-main">ma priorité.</span>
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -62,11 +62,17 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Actuellement en reconversion professionnelle et passionné par le domaine de l'informatique. <br>
-                Je souhaite mettre mes compétences et mon expérience acquises durant ces dernières années au service de cette nouvelle carrière.
+                Adepte de l'informatique depuis le plus jeune âge, je ne pensais pas en faire mon métier mais la vie à bien voulu que je puisse faire, après un apprentissage en autodidacte, deux formations me permettant aujourd'hui de développer des projets complet.<br><br>
+                La première en tant que développeur web et la seconde dans l'administration de bases de données.<br>
+                Formation certifiante qui me permettre de me présenter en tant que développeur web.<br>
+
               </p>
               <p class="about-wrapper__info-text">
-                Pour ce faire, je développe votre activité en améliorant votre visibilité sur le web en créant votre identité numérique.
+                Aujourd'hui, je suis apte à créer ton identité numérique et à te fournir toutes les cartes afin d'avoir une visibilité accru dans ce vaste monde qu'est le web.<br>
+                Le développement, ce n'est pas seulement coder mais c'est également améliorer ta vie en te fournissant tout les outils nécessaires afin de passer ton entreprise au niveau supérieur.<br><br>
+                Ton logo, ton site, ta base de données, qu'ils soient à créer ou à améliorer, peuvent être prise en main par une seule et unique personne.<br>
+                Alors ne soit plus acteur de la réussite des autres et passe à l'action afin que nous puissions ensemble développer ton activité.
+
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -148,9 +154,9 @@
                 <h3 class="project-wrapper__text-title">Générateur de gradient</h3>
                 <div>
                   <p class="mb-4">
-                    Petit projet personnel <br><br>
+                    Petit projet personnel en Javascript <br><br>
                     Générateur de fond avec variation de couleur de gauche à droite.<br>
-                    On peut définir soi-même les couleurs que l'on veut ou laisser le script choisir deux couleurs pour nous.<br><br>
+                    On peut définir soi-même les couleurs que l'on veut ou laisser le script choisir deux couleurs à notre place.<br><br>
                     Le code css est afficher en dessous pour l'intégrer facilement à un projet.<br><br>
                     Mise en place d'une vérification couleur (hex et rgb).
                   </p>
@@ -204,7 +210,7 @@
                     Premier projet géré de A à Z avec Wordpress (DIVI) <br><br>
                     Site vitrine présentant les activités pédagogiques de la sky academy avec implémentation d'un moyen de paiement par carte bleue en plus  d'un espace abonné. <br><br>
                     Malheureusement, le site a été retravailler cette année et donc ce n'est plus mon travail qu vous verrez si je vous donne le lien.<br><br>
-                    Je vous le présente tout de même parce que ça reste un de mes projets préférés et j'ai eu beaucoup de plaisir à développer toutes leur identité numnérique de zéro.
+                    Je vous le présente tout de même parce que ça reste un de mes projets préférés et j'ai eu beaucoup de plaisir à développer toutes leur identité numérique de zéro.
                   </p>
                 </div>
               </div>
